# simplexoldClion

./: CMakeLists.txt  README.md  main.cpp
common/: ArbitraryArrayPointer.cpp  ArbitraryArrayPointer.h  AuxFunc.cpp  AuxFunc.h  BitFaceField.h  BitField.h  CMakeLists.txt  Common.h  ConfigParser.h  Constants.h  DataIO.cpp  DataIO.h  Driver.h  EnumType.h  FaceField.cpp  FaceField.h  Field.cpp  Field.h  File.h  GeometryPrimitives.h  Grid.cpp  Grid.h  Hashtable.h  Interpolation.h  Kernel.h  KrylovSolver.cpp  KrylovSolver.h  MH.cpp  MH.h  MacGrid.cpp  MacGrid.h  Mesh.cpp  Mesh.h  MeshFunc.cpp  MeshFunc.h  Particles.cpp  Particles.h  RandomNumber.h  SimplicialPrimitives.h  Sparse.cpp  (+4 more)
geometry/: BoundaryCondition.cpp  BoundaryCondition.h  CMakeLists.txt  Codimension.cpp  Codimension.h  EulerInitializer.cpp  EulerInitializer.h  Extrapolation.h  GH.cpp  GH.h  GeometryParticles.h  LeastSquares.h  LevelSet.cpp  LevelSet.h  LevelSetFunc.cpp  LevelSetFunc.h  MarchingCubes.cpp  MarchingCubes.h  MeshAdvFunc.cpp  MeshAdvFunc.h  Mesher.h  NeighborHashing.h  NeighborKDTree.cpp  NeighborKDTree.h  NeighborSearcher.cpp  NeighborSearcher.h  PointSet.cpp  PointSet.h  PointSetFunc.cpp  PointSetFunc.h  RigidGeometry.cpp  RigidGeometry.h  RigidImplicitGeometry.cpp  RigidImplicitGeometry.h  SPHKernels.cpp  SPHKernels.h  test.h
optimization/: CMakeLists.txt  Optimizer.h  OptimizerIpOpt.cpp  OptimizerIpOpt.h  OptimizerMma.h  OptimizerNlOpt.h  OptimizerSnOpt.h  TopoOptMma.h  TopoOptSimp.h  test.h
parallel/: AuxFuncCuda.cu  AuxFuncCuda.cuh  CMakeLists.txt
physics/: CMakeLists.txt  LinearFemFunc.cpp  LinearFemFunc.h  SoftBodyLinearFemGrid.cpp  SoftBodyLinearFemGrid.h
solver/: CMakeLists.txt  ColorGrid.h  GeometricMultiGrid.cpp  GeometricMultiGrid.h  GmgPcgSolverCPU.cpp  GmgPcgSolverCPU.h  MultiGrid.cpp  MultiGrid.h
viewer/: CMakeLists.txt  test.cpp
